# XasQQBot

./: .dockerignore  .env  .gitignore  .pdm-python  Dockerfile  README.md  pyproject.toml  test.py
.github/workflows/: TruffleHog-OSS.yml  build-docker.yml  ruff_lint.yml
src/data/: __init__.py
src/plugins/anime_trace/: __init__.py  config.py
src/plugins/chatgpt/: __init__.py  chatGpt.py  config.py
src/plugins/github_opengraph/: __init__.py  config.py
src/plugins/github_webhook/: __init__.py  config.py  webhook.py
src/plugins/mc_status/: __init__.py  config.py
src/plugins/repeater/: __init__.py  config.py
src/plugins/xas_animetrace/: __init__.py  config.py
src/plugins/xas_chat_mcstatus/: __init__.py  config.py
src/plugins/xas_chat_memory/: __init__.py
src/plugins/xas_chatgpt/: __init__.py  api.py  chatgpt.py  config.py
src/plugins/xas_checkmc/: __init__.py  config.py
src/plugins/xas_github/: __init__.py  config.py
src/plugins/xas_github_opengraph/: __init__.py  config.py
src/plugins/xas_gpt_mcstatus/: __init__.py  config.py
src/plugins/xas_moegirlwiki/: __init__.py
src/plugins/xas_ping/: __init__.py
src/plugins/xas_util/: __init__.py  config.py
