[project]
name = "XasQQBot"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "XiYang6666", email = "1782356858@qq.com"},
]
dependencies = [
    "openai>=0.28.1",
    "httpx>=0.25.0",
    "nonebot2[fastapi,httpx,websockets]>=2.1.1",
    "nonebot-adapter-red>=0.5.1",
    "nb-cli>=1.2.5",
    "mcstatus>=11.0.1",
]
license = {text = "MIT"}

[tool.nonebot]
adapters = [
    {name = "RedProtocol", module_name = "nonebot.adapters.red"},
]
plugins = []
plugin_dirs = ["src/plugins"]
builtin_plugins = []

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
